log
Thu 09 Mar 2023 03:54:22 PM UTC: 
 tests:  0|7
total_score: 0/70
ef9b54b
Fri 17 Mar 2023 11:41:07 AM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:11: error: expected expression before ‘<’ token
   17 |   if (*a >< *b){
      |           ^
exercises.c:16:7: error: variable ‘basura’ set but not used [-Werror=unused-but-set-variable]
   16 |   int basura;
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9833c15
Fri 17 Mar 2023 11:41:34 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:11: error: expected expression before ‘>’ token
   17 |   if (*a <> *b){
      |           ^
exercises.c:16:7: error: variable ‘basura’ set but not used [-Werror=unused-but-set-variable]
   16 |   int basura;
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bf4308d
Fri 17 Mar 2023 11:42:12 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:10: error: stray ‘\342’ in program
   17 |   if (*a ≠ *b){
      |          ^
exercises.c:17:14: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   if (*a ≠ *b){
      |       ~~   ^
      |       |
      |       int
exercises.c:16:7: error: variable ‘basura’ set but not used [-Werror=unused-but-set-variable]
   16 |   int basura;
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
646ece8
Fri 17 Mar 2023 11:42:40 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   17 |   if (*a =! *b){
      |       ^
exercises.c:16:7: error: variable ‘basura’ set but not used [-Werror=unused-but-set-variable]
   16 |   int basura;
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
57d505c
Fri 17 Mar 2023 11:43:06 AM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   16 |   if (*a =! *b){
      |       ^
cc1: all warnings being treated as errors
Compilation failed
791a1d4
Fri 17 Mar 2023 11:45:18 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:10: error: stray ‘\342’ in program
   16 |   if (*a ≠ *b){
      |          ^
exercises.c:16:14: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   16 |   if (*a ≠ *b){
      |       ~~   ^
      |       |
      |       int
Compilation failed
ef040f9
Fri 17 Mar 2023 11:45:44 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   16 |   if (*a = *b!){
      |       ^
exercises.c:16:14: error: expected ‘)’ before ‘!’ token
   16 |   if (*a = *b!){
      |      ~       ^
      |              )
cc1: all warnings being treated as errors
Compilation failed
2e99a96
Fri 17 Mar 2023 11:46:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   16 |   if ( *a =! *b){
      |        ^
cc1: all warnings being treated as errors
Compilation failed
0452fa8
Fri 17 Mar 2023 11:47:03 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
57a1724
Fri 17 Mar 2023 11:53:14 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:35:20: error: expected ‘;’ before ‘}’ token
   35 |         *min = a[i]
      |                    ^
      |                    ;
   36 | 
   37 |   }
      |   ~                 
Compilation failed
984eaae
Fri 17 Mar 2023 11:53:22 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:30:3: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
   30 |   for (int i; i<n ;i++){
      |   ^~~
cc1: all warnings being treated as errors
Compilation failed
d27501f
Fri 17 Mar 2023 11:56:42 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:32:3: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
   32 |   for(int i; i<n ;i++){
      |   ^~~
cc1: all warnings being treated as errors
Compilation failed
78f00f0
Fri 17 Mar 2023 11:57:20 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
286b050
Fri 17 Mar 2023 12:01:18 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:60:17: error: ‘p’ is a pointer; did you mean to use ‘->’?
   60 |   scanf("%c", &p.nombre);
      |                 ^
      |                 ->
exercises.c:61:17: error: ‘p’ is a pointer; did you mean to use ‘->’?
   61 |   scanf("%c", &p.rut);
      |                 ^
      |                 ->
exercises.c:62:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   62 |   scanf("%i", &edad);
      |   ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
779733c
Fri 17 Mar 2023 12:01:55 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:60:17: error: ‘p’ is a pointer; did you mean to use ‘->’?
   60 |   scanf("%c", &p.nombre[30]);
      |                 ^
      |                 ->
exercises.c:61:17: error: ‘p’ is a pointer; did you mean to use ‘->’?
   61 |   scanf("%c", &p.rut[11]);
      |                 ^
      |                 ->
exercises.c:62:17: error: ‘p’ is a pointer; did you mean to use ‘->’?
   62 |   scanf("%i", &p.edad);
      |                 ^
      |                 ->
Compilation failed
49a1877
Fri 17 Mar 2023 12:05:05 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:60:3: error: implicit declaration of function ‘strcopy’; did you mean ‘strcpy’? [-Werror=implicit-function-declaration]
   60 |   strcopy(p.nombre, nombre);
      |   ^~~~~~~
      |   strcpy
exercises.c:60:12: error: ‘p’ is a pointer; did you mean to use ‘->’?
   60 |   strcopy(p.nombre, nombre);
      |            ^
      |            ->
exercises.c:61:12: error: ‘p’ is a pointer; did you mean to use ‘->’?
   61 |   strcopy(p.rut, rut);
      |            ^
      |            ->
exercises.c:62:4: error: ‘p’ is a pointer; did you mean to use ‘->’?
   62 |   p.edad=edad;
      |    ^
      |    ->
cc1: all warnings being treated as errors
Compilation failed
e8eb3ee
